2008-11-13  Mike Kestner  <mkestner@novell.com>

	* gtk-gui/*.cs: regen
	* gtk-gui/gui.stetic: replace the main hbox with an hpaned to
	allow resizing.

2008-11-11  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Core.Gui/AlertDialog.cs: Escape error text.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Gui.addin.xml: Bump MD version.

2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Gui/MessageService.cs: Use Ok button for warning
	dialogs.

2008-10-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Core.Gui/MessageService.cs: Added proceed button to fix
	the build.

2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Gui.mdp,
	  MonoDevelop.Core.Gui/GuiSyncAbstractService.cs,
	  MonoDevelop.Core.Gui/GuiService.cs,
	  MonoDevelop.Core.Gui/PlatformService.cs, Makefile.am: Track removal
	  of service APIs.

2008-09-30  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core.Gui/PlatformService.cs: added
	  DefaultControlLeftRightBehavior to the platform service.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp: Updated.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp,
	  MonoDevelop.Core.Gui.Dialogs/OptionsDialog.cs, Makefile.am,
	  icons/empty-category-16.png, icons/empty-category-22.png,
	  MonoDevelop.Core.Gui.addin.xml: Added new simple icon for option
	  dialog panels which don't have one.

2008-08-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp, Makefile.am, icons/breakpoint-new-16.png,
	  icons/breakpoint-new-22.png, MonoDevelop.Core.Gui.addin.xml: Added
	  icons for New Breakpoint.
	* MonoDevelop.Core.Gui/GLibLogging.cs,
	  MonoDevelop.Core.Gui/PlatformService.cs: Fix warnings.

2008-08-06  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp, Makefile.am,
	  icons/breakpoint-on-off-22.png, icons/breakpoint-invalid-16.png,